classDiagram
  %% ==== Core Classes ====
  class GameController {
    -List~IPlayer~ _players
    -int _currentPlayerIndex = 0
    -IBoard _ownBoard
    -IBoard _trackingBoard
    -Dictionary~IPlayer, List<Ship>~ _fleet
    +OnShotFired: Action~IPlayer, Coordinate~
    +StartGame(): void
    +TakeTurn(Coordinate): void
    +SwitchTurn(): void
    +EndGame(): bool
    +CheckWinner(): IPlayer
    +Shoot(Coordinate): bool
    +RemainingShips(): int
    +PlaceShip(ShipType, List~Coordinate~): bool
    +ReceiveShot(Coordinate): bool
    +AllShipsSunk(): bool
    +RegisterHit(Coordinate): void
    +IsSunk(): bool
    +MarkHit(Coordinate): void
    +HasShip(Coordinate):bool
  }

  class Ship {
    -string _name
    -int _size
    -int _hits
    -List~Coordinate~ _coordinates
    +GetType(): ShipType
    +GetName(): string
    +SetName(name: string): void
    +GetSize(): int
    +SetSize(size: int): void
  }

  class Coordinate {
    -int _x
    -int _y
    +ToString(): string
    <<record struct>>
  }

  %% ==== Interfaces ====
  class IPlayer {
    <<interface>>
    +GetName(): string
    +SetName(name: string): void
  }

  class IBoard {
    <<interface>>
    +GetBoard(Coordinate): Cell
  }

  class IShip{
    <<interface>>
    +GetType(): ShipType
    +GetName(): string
    +SetName(name: string): void
    +GetSize(): int
    +SetSize(size: int): void
  }

  %% ==== Implementations ====
  class Player {
    -string _name
    +GetName(): string
    +SetName(name: string) void
  }

  class Board {
    -Cell[][] _grid
    -Dictionary~Coordinate, Ship~ _ships
    +GetBoard(Coordinate): Cell

  }

  class Cell {
    -Coordinate _position
    -bool _isHit
    -Ship? _ship
    +GetPosition(): Coordinate
    +GetShip(): Ship
  }

  class ShipType {
    CARRIER
    BATTLESHIP
    CRUISER
    SUBMARINE
    DESTROYER
    <<enumeration>>
  }

  %% ==== Relationships ====
  GameController --> IPlayer
  GameController --> IBoard
  GameController --> IShip
  GameController --> Coordinate
  IShip <|.. Ship
  IPlayer <|.. Player
  IBoard <|.. Board
  Board --> Cell
  Ship --> ShipType
  Ship --> Coordinate